--- a/Facebook/login.html
+++ b/Facebook/login.html
@@ -44,9 +44,9 @@
         .contenedorformularioinput{
             
             width: 390px;
-            height: 450px;
+            height: 400px;
             background-color: white;
-            border-radius: 3%;
+            border-radius: 3px;
         }
         .cajadetexto{
             height: 50px;
@@ -115,7 +115,7 @@
                     Facebook te ayuda a comunicarte y compartir con las personas que forman parte de tu vida.
                 </p>
             </div>
-            <div class="contenedorformulario">
+            <div class="contenedorformulario" class="text">
                 <div class="contenedorformularioinput">
                     <input type="text" placeholder="Correo Electonico o numero de Telefono" class="cajadetexto"/>
                     <input type="password" placeholder="Contraseña" class="cajadetexto"/>
@@ -129,6 +129,10 @@
                     </center>
                     
                 </div>
+                <br>
+                <a href="" style="text-decoration: none;">
+                    <b>Crea una página</b> para una celebridad, una marca o un negocio.
+                </a> 
             </div>
 
         </div>
